vault/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    spec.ingressClassName: traefik
#    kubernetes.io/ingress.class: traefik  # Specify the Ingress controller class if needed
spec:
  tls:
  - hosts:
    - vault.k3s.internal
    secretName: vault-k3s-internal
  rules:
  - host: vault.k3s.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
